@@ -22,5 +22,6 @@
     <include file="dependencies.zcml" />
     <include package=".browser" />
     <include package=".portlets" />
+    <include package=".viewlets" />
 
 </configure>
