@@ -1,0 +1,10 @@
+<div class="simplelayoutNewsByLine documentByLine">
+    <span class="documentAuthor">
+        erstellt von Blubb
+    </span>
+    &mdash;
+    <span class="documentModified">
+        zuletzt verändert:
+        26.04.2012 07:28
+    </span>
+</div>
